--- a/gb/17/8/14/n9526504.md
+++ b/gb/17/8/14/n9526504.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cetaqr2477/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cetaqr2477/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cetaqr2477/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>旧金山菲律宾文化节  庆祝骄傲与发展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130002451749-600x400.jpg" />
 <h6>2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）
 </h6>
 <hr>
-<p>【大纪元2017年08月14日讯】（大纪元记者周容<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>报导）8月12日（上周六），旧金山举办了第24届<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%96%87%E5%8C%96%E8%8A%82.md#1">菲律宾文化节</a>游行（Pistahan Parade），庆祝菲律宾裔社区的骄傲和发展。旧金山菲律宾文化节是全美菲律宾裔最大的庆典活动，每年有几万人参加。</p>
-<p>8月12日上午<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%96%87%E5%8C%96%E8%8A%82.md#1">菲律宾文化节</a>透过游行、美食和歌舞表演来庆祝他们的文化。游行队伍有穿着菲律宾传统服饰及装饰华丽的花车，游行结束后在芳草地公园（Yerba Buena Gardens）还有一系列的歌舞表演、展览活动及美食摊位。</p>
-<p>菲律宾美国艺术博览会主席Al Perez介绍说，游行的主题是骄傲与发展，欢迎大家参加2017年菲律宾文化节庆祝活动。<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>市长和市议会通过决议，宣布南市场街的一大部分为菲律宾文化传统区。</p>
-<figure id="attachment_9526542" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/1708130003541749.jpg"><img class="size-large wp-image-9526542" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130003541749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
-<figure id="attachment_9526546" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/1708130003161749.jpg"><img class="size-large wp-image-9526546" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130003161749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
+<p>【大纪元2017年08月14日讯】（大纪元记者周容<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>报导）8月12日（上周六），旧金山举办了第24届<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%96%87%E5%8C%96%E8%8A%82.md#1">菲律宾文化节</a>游行（Pistahan Parade），庆祝菲律宾裔社区的骄傲和发展。旧金山菲律宾文化节是全美菲律宾裔最大的庆典活动，每年有几万人参加。</p>
+<p>8月12日上午<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%96%87%E5%8C%96%E8%8A%82.md#1">菲律宾文化节</a>透过游行、美食和歌舞表演来庆祝他们的文化。游行队伍有穿着菲律宾传统服饰及装饰华丽的花车，游行结束后在芳草地公园（Yerba Buena Gardens）还有一系列的歌舞表演、展览活动及美食摊位。</p>
+<p>菲律宾美国艺术博览会主席Al Perez介绍说，游行的主题是骄傲与发展，欢迎大家参加2017年菲律宾文化节庆祝活动。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>市长和市议会通过决议，宣布南市场街的一大部分为菲律宾文化传统区。</p>
+<figure id="attachment_9526542" aria-describedby="caption-attachment-9526542" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/1708130003541749.jpg"><img class="size-large wp-image-9526542" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130003541749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9526542" class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_9526546" aria-describedby="caption-attachment-9526546" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/1708130003161749.jpg"><img class="size-large wp-image-9526546" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130003161749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9526546" class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
 <p>菲律宾文化节游行主委John Espiritu表示，今天的游行是庆祝菲律宾的骄傲。游行队伍有60至70支。我们一直希望扩大游行队伍。欢迎所有的人参加。</p>
 <p>游行主委、菲律宾美国艺术博览会副主席Gerard Talampas说：“看到社区走到一起，我很高兴。我们在这里互相支持。许多支游行队伍每年都来参加游行，我们感谢你们的支持。”</p>
-<figure id="attachment_9526552" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/1708130001531749.jpg"><img class="size-large wp-image-9526552" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130001531749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
-<p>法轮大法美西<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>作为唯一的一支<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA%E9%98%9F%E4%BC%8D.md#1">华人队伍</a>参加了游行。他们为民众带来了〈法轮大法好〉、〈神圣的歌〉和〈星条旗永不落〉等乐曲。<br />
-<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>指挥亚伯拉罕说：“我们经常参加旧金山多元文化庆祝活动，今天的演奏很成功，我们的游行队伍经过时，道路两边的民众非常高兴。可以看出来，他们对我们的演奏留下了深刻印象。”</p>
+<figure id="attachment_9526552" aria-describedby="caption-attachment-9526552" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/1708130001531749.jpg"><img class="size-large wp-image-9526552" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130001531749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9526552" class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
+<p>法轮大法美西<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>作为唯一的一支<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA%E9%98%9F%E4%BC%8D.md#1">华人队伍</a>参加了游行。他们为民众带来了〈法轮大法好〉、〈神圣的歌〉和〈星条旗永不落〉等乐曲。<br />
+<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%9B%BD%E4%B9%90%E5%9B%A2.md#1">天国乐团</a>指挥亚伯拉罕说：“我们经常参加旧金山多元文化庆祝活动，今天的演奏很成功，我们的游行队伍经过时，道路两边的民众非常高兴。可以看出来，他们对我们的演奏留下了深刻印象。”</p>
 <p>主办方感谢天国乐团参加游行。菲律宾文化节游行主委John Espiritu说：“天国乐团的队伍是最优秀的（the best），我们喜爱他们。他们总是为我们带来能量，非常荣幸能邀请到天国乐团。”</p>
-<figure id="attachment_9526562" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/1708130001131749.jpg"><img class="size-large wp-image-9526562" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130001131749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_9526562" aria-describedby="caption-attachment-9526562" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/1708130001131749.jpg"><img class="size-large wp-image-9526562" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130001131749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9526562" class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
 <p>游行主委、菲律宾美国艺术博览会副主席Gerard Talampas说：“我喜爱天国乐团的队伍，他们的队伍非常庞大，演奏的非常棒，非常成功。我很高兴看到游行中有不同的文化团体参加。非常感谢他们来参加游行。”</p>
 <p>观众为天国乐团竖起大拇指。菲律宾人Allelo骄傲地表示，他是菲律宾人，很高兴为天国乐团的队伍竖起大拇指。他说：“这个队伍非常棒、非常好。这个乐团非常棒。感谢你们。”在美国出生的菲律宾后代Johnpaul Sanz表示，他非常喜欢天国乐团的游行队伍，“他们的步伐很整齐，演奏的乐曲很嘹亮。”</p>
-<figure id="attachment_9526592" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/1708130000581749.jpg"><img class="size-large wp-image-9526592" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130000581749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_9526592" aria-describedby="caption-attachment-9526592" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/1708130000581749.jpg"><img class="size-large wp-image-9526592" title="" src="https://i.epochtimes.com/assets/uploads/2017/08/1708130000581749-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9526592" class="wp-caption-text">2017年8月12日，旧金山菲律宾文化节游行。（周容／大纪元）</figcaption></figure>
 <p>“我支持你们，我支持你们反迫害。”为天国乐团游行队伍鼓掌的Mary说： “我非常高兴看到积极正面、令人愉快，又具有娱乐性的游行队伍。我希望更多的人能看到法轮功的真相传单。”◇</p>
 <p>（此文发表于1147A期旧金山湾区新闻版）</p>
 <p><b><a style="color: #3339ff;" href="http://zipsurvey.com/Survey.aspx?suid=79300&amp;key=4EF2EA2A">要想定期快速浏览一周新闻集锦，请点这里。</a></b></p>
@@ -30,42 +30,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/5/n9499093.md#1">旧金山湾区国民党批评蔡英文做得太差</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/7/n9505028.md#1">旧金山政治腐败案  法官择日决定是否起诉</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/7/n9505374.md#1">旧金山BART站  发生青少年抢劫未遂</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/8/n9508913.md#1">华人夫妇9万买旧金山豪宅街 引轩然大波</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/10/n9515095.md#1">油价再次上涨 旧金山湾区平均每加仑超过3美元</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/11/n9518604.md#1">旧金山中央地铁让华埠商家关门   市府资助引分歧</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/12/n9521793.md#1">旧金山将如何应对北韩导弹攻击</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/13/n9524379.md#1">支持国家服务侨社 旧金山侨领获奖</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/8/13/n9524603.md#1">原民乐舞跃国际 高市获邀旧金山国际童玩节</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/2/10/n11857605.md#1">硅谷华人新年庆典    各族裔观众共度华人节日</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/5/n9499093.md#1">旧金山湾区国民党批评蔡英文做得太差</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/7/n9505028.md#1">旧金山政治腐败案  法官择日决定是否起诉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/7/n9505374.md#1">旧金山BART站  发生青少年抢劫未遂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/8/n9508913.md#1">华人夫妇9万买旧金山豪宅街 引轩然大波</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/10/n9515095.md#1">油价再次上涨 旧金山湾区平均每加仑超过3美元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/11/n9518604.md#1">旧金山中央地铁让华埠商家关门   市府资助引分歧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/12/n9521793.md#1">旧金山将如何应对北韩导弹攻击</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/13/n9524379.md#1">支持国家服务侨社 旧金山侨领获奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/13/n9524603.md#1">原民乐舞跃国际 高市获邀旧金山国际童玩节</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/29/n12438055.md#1">旧金山东湾法轮功学员恭祝师父中秋节快乐</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10018540.md#1" target="_blank">戏剧家英若诚的线人生涯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133843.md#1">弃绿卡回国近家破人亡 女硕士:千万别信宣传</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/23/n12131818.md#1">【直播回放】5.24港人反国安恶法游行</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134669.md#1">山东福建出现H9N2 台疾管署订旅游2级警示</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134473.md#1">你中奖了吗？109年3-4月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133387.md#1">分析：大陆社会信心崩溃 失业者不满情绪高</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/23/n12131774.md#1">黄耀明与艺文界数百人联署 抵制港版国安法</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133574.md#1">无惧遭清算 何韵诗：未来不会离开香港</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134313.md#1">与张上淳是堂兄弟 张洪量：有受影响才从医</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133547.md#1">杨紫最新宣传片涉抄袭 创意配色撞款IU专辑</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133047.md#1">【纪元播报】历史上瘟疫：神农尝百草的秘密</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/21/n12127421.md#1">南朝人误入山洞 遇到汉代的道家隐士河上公</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/4/12/n12025000.md#1">【馨香雅句】德音雅乐 听乐以治心</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/20/n12123948.md#1">在瘟疫中救人的神仙</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/20/n12123970.md#1">文艺复兴大师范艾克笔下精细之美</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/14/n9526504.htm">旧金山菲律宾文化节  庆祝骄傲与发展</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/14/n9526504.htm">旧金山菲律宾文化节  庆祝骄傲与发展</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/cetaqr2477/djy/blob/master/gb/17/8/14/n9526504.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cetaqr2477/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cetaqr2477/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/8/14/n9526504.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
